# fastpay4j

./: README.md  pom.xml
bincode-gen/: Cargo.toml  README.md  fastpay_types.yaml
bincode-gen/fastpay_core/: Cargo.toml
bincode-gen/fastpay_core/src/: client.rs  foo.rs
bincode-gen/fastpay_gen/: Cargo.toml
bincode-gen/fastpay_gen/src/: main.rs
bincode-gen/generated-java/money/fluid/fastpay/bincode/: AccountInfoRequest.java  AccountInfoResponse.java  Address.java  Amount.java  Balance.java  CertifiedTransferOrder.java  ConfirmationOrder.java  CrossShardUpdate.java  EdPublicKeyBytes.java  FundingTransaction.java  PrimarySynchronizationOrder.java  RedeemTransaction.java  SequenceNumber.java  Signature.java  SignedTransferOrder.java  TraitHelpers.java  Transfer.java  TransferOrder.java  UserData.java
fastpay-client/: pom.xml
fastpay-client-cli/: pom.xml
fastpay-core/: pom.xml
fastpay-integration-tests/: pom.xml
fastpay-server/: pom.xml
fastpay-server/src/main/java/com/sappenin/fastpay/: FastPay4jApplication.java
fastpay-server/src/main/resources/: application-novi.properties  application.properties
fastpay4j-server/: pom.xml
fastpay4j-server/src/main/java/money/fluid/fastpay4j/: FastPay4jApplication.java  (+1 more)
fastpay4j-server/src/main/resources/: application-dev.properties  application-novi.properties  application.properties  banner.txt
fastpay4j-server/src/test/resources/: application-property-unit-tests.properties
src/main/java/money/fluid/fastpay4j/: Fastpay4jApplication.java
src/main/resources/: application-dev.properties
(+203 files in other folders)
