[package]
name = "fastpay_gen"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

fastpay_core = { path = "../fastpay_core" }

serde-reflection = { version = "0.3.3" }
serde-generate = { version = "0.19.3" }
serde_yaml = { version = "0.8.17" }

[[bin]]
name = "fp-gen"
path = "src/main.rs"